--- a/style.css
+++ b/style.css
@@ -114,7 +114,7 @@ div {
     .caixa {
         width: 100%;
     
-        padding: 15px;
+       
     }
 
     .caixa h1 {
@@ -125,12 +125,16 @@ div {
         font-size: 14px;
     }
 
-    .votar, .voltar, form button {
+    .votar {
         font-size: 14px;
         margin-top: 100px;
-        margin-left: 100px;
-    }
+        margin-left: 130px;
 
+    }
+.wtsapp{
+    margin-left: 100px;
+    margin-top: 50px;
+}
     
  
 }
