--- a/style.css
+++ b/style.css
@@ -112,28 +112,53 @@ div {
 
  @media (max-width: 600px) {
     .caixa {
-        width: 100%;
+        width: 97%;
+        margin-left: 6px;
+        height: 200px;
     
        
+    }
+    img{
+        width: 100%;
+        margin-top: 5px;
+        height: 370px;
     }
 
     .caixa h1 {
         font-size: 20px;
+    
+        width: 100%;
+        height: 30px;
     }
 
-    .caixa p {
-        font-size: 14px;
+     p {
+        font-size: 10px;
+        background-color: red;
+        height: 100px;
+     ;
+      
     }
 
     .votar {
-        font-size: 14px;
-        margin-top: 100px;
-        margin-left: 130px;
+        font-size: 7px;
+        margin-bottom: 100px;
+        margin-left: 10px;
+        width: 70px;
+    
 
     }
 .wtsapp{
-    margin-left: 100px;
-    margin-top: 50px;
+    margin-right: 500px;
+    background-color: #fff
+
+  
+}
+.caixa{
+    height: 100px;
+}
+body{
+    background-color: #bbb9b9;
+height: auto;
 }
     
  
