--- a/style.css
+++ b/style.css
@@ -132,7 +132,7 @@ div {
     }
 
      p {
-        font-size: 10px;
+        font-size: 16px;
         background-color: red;
         height: 100px;
      
@@ -141,17 +141,17 @@ div {
 
     .votar {
         font-size: 7px;
-        margin-bottom: 100px;
-        margin-left: 160px;
+        margin-top: 115px;
+        margin-left: 1px;
         width: 70px;
 
 
     }
 .wtsapp{
     height: 40px;
-    margin-top: 530px;
+    margin-top: 790px;
     margin-left: 350px;
-
+}
 
 
 
